--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".ui.MainActivity"
+            android:name=".ui.TopAlbumsActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar.MainActivity">
+            android:theme="@style/TopAlbumsActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
