--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".ui.TopAlbumsActivity"
+            android:name=".ui.topalbums.TopAlbumsActivity"
             android:label="@string/app_name"
             android:theme="@style/TopAlbumsActivity">
             <intent-filter>
