Implement single album screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <!-- TopAlbumsActivity -->
         <activity
             android:name=".ui.topalbums.TopAlbumsActivity"
             android:label="@string/app_name"
@@ -22,6 +23,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <!-- SingleAlbumActivity -->
+        <activity
+            android:name=".ui.singlealbum.SingleAlbumActivity"
+            android:parentActivityName=".ui.topalbums.TopAlbumsActivity"
+            android:theme="@style/SingleAlbumActivity" />
     </application>
 
 </manifest>
